--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+.hidden{
+    display: none;
+}
 body{
    display: flex;
    flex-direction: column;
@@ -68,7 +71,7 @@ body{
     color: black;
     padding: 15px 32px;
     text-align: center;
-    display: inline-block;
+    /* display: inline-block; */
     font-size: 16px;
     cursor: pointer;
 }
@@ -84,7 +87,7 @@ body{
     color: black;
     padding: 15px 32px;
     text-align: center;
-    display: inline-block;
+    /* display: inline-block; */
     font-size: 16px;
     cursor: pointer;
 }
@@ -205,6 +208,3 @@ body{
 
 
 
-.hidden{
-    display: none;
-}
