--- a/style.css
+++ b/style.css
@@ -81,6 +81,8 @@ body{
     text-decoration: underline;
 }
 
+
+
 #signup-button {
     background-color: violet;
     border: none;
@@ -208,3 +210,17 @@ body{
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+.hidden{
+    display: none;
+}
