--- a/style.css
+++ b/style.css
@@ -6,12 +6,11 @@ body{
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   border: 1px solid black;
    background-color: rgba(0, 247, 255, 0.219);
 }
 
 .entire-screen {
-   border:1px solid black ;
+   border:5px solid black ;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -303,7 +302,8 @@ body{
     font-size: 20px;
 }
 
-#create-submit{
+#create-submit
+{
     width: 200px;
     background-color: gold;
     height: 30px;
@@ -317,6 +317,7 @@ body{
 #create-submit:hover{
 background-color: rgb(177, 150, 0);
 }
+
 
 #all-businesses-section{
    background-color: white;
@@ -356,7 +357,7 @@ background-color: rgb(177, 150, 0);
     width: 700px;
 }
 .business-info-div{
-    border: solid 1px black;
+    border-bottom: solid 3px black;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -446,10 +447,196 @@ background-color: rgb(177, 150, 0);
 background-color: rgb(0, 187, 93);
 }
 
+.location-box{
+    margin-top: 5px;
+    width: 414px;
+    border: 4px solid grey;
+    border-radius: 4px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.location-box:hover{
+    border: 4px solid springgreen;
+}
 
 
-.display-reviews-div{
-   
+.search-edit-delete-submit{
+    width: 200px;
+    background-color: springgreen;
+    height: 30px;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-bottom: 25px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    margin-top: 10px;
+    margin-right: 4px;
+}
+
+.search-edit-delete-submit:hover{
+background-color: rgb(2, 187, 94);
+}
+
+.each-review {
+    border: 4px solid grey;
+    border-radius: 4px;
+    font-size: 15px;
+    margin-top: 5px;
+    padding: 2px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.each-review:hover{
+    border: 4px solid black;
+}
+
+.all-reviews-display{
+    overflow: scroll;
+}
+
+.edit-review-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+#edit-review-description{
+    border: 4px solid grey;
+    border-radius: 4px;
+    height: 100px;
+    font-size: 17px;
+    width: 250px;
+    padding: 2px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+#edit-review-description:focus{
+    border: 4px solid springgreen;
+}
+
+#edit-review-score{
+    margin-top: 5px;
+    width: 100px;
+    border: 4px solid grey;
+    border-radius: 4px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    margin-bottom: 10px;
+}
+
+#edit-review-score:focus{
+    border: 4px solid springgreen;
+}
+
+
+.cancel-review-edit{
+    width: 200px;
+    background-color: springgreen;
+    height: 30px;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-bottom: 25px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    margin-top: 10px;
+    margin-right: 4px;
+}
+
+.cancel-review-edit:hover{
+    background-color: rgb(2, 187, 94);
+}
+
+.edit-business-form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.edit-input{
+    margin-top: 5px;
+    border: 4px solid grey;
+    border-radius: 4px;
+    height: 30px;
+    font-size: 20px;
+    width: 400px;
+    padding: 2px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+.edit-input:focus{
+    border: 4px solid springgreen;
+}
+
+#edit-business-description{
+    border: 4px solid grey;
+    border-radius: 4px;
+    height: 100px;
+    font-size: 17px;
+    width: 400px;
+    padding: 2px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+}
+
+#edit-business-description:focus{
+    border: 4px solid springgreen;
+}
+
+#edit-business-type{
+    margin-top: 5px;
+    width: 100px;
+    border: 4px solid grey;
+    border-radius: 4px;
+    background-color: lightgray;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    margin-bottom: 10px;
+}
+
+#edit-business-type:focus{
+    border: 4px solid springgreen;
+}
+
+.cancel{
+    width: 200px;
+    background-color: springgreen;
+    height: 30px;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 20px;
+    margin-bottom: 25px;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    margin-top: 10px;
+    margin-right: 4px;
+}
+
+.cancel:hover{
+    background-color: rgb(2, 187, 94);
+}
+
+#home-screen{
+    background-color: white;
+    width: 700px;
 }
 
 
